# POS2SSG_construction

./: .gitignore  LICENSE  MANIFEST.in  README.md  USAGE.md  VERSION_GUIDE.md  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
POS2SSG/: POS2SSG.py  __init__.py  deal_cell.py  generate_mag.py  generate_structure.py  mag_atom.py  poscar_io.py
